--- a/index.html
+++ b/index.html
@@ -27,43 +27,47 @@
         <section class="carousel-container">
             <div class="mySlides fade">
                 <div class="numbertext">1 / 5</div>
-                <div class="mySlides-image-right" src="/Media/wood-texture-3723070_640.jpg" alt="Forest landscape with smoke rising up from the underbrush"></div>
-                <div class="mySlides-text mySlides-text-left">
+                <div class="mySlides-text mySlides-text-right">
                     <h2>Climate Issue</h2>
                     <p>Text goes here</p>
                 </div>
+                <img src="/Media/wood-texture-3723070_640.jpg" alt="Forest landscape with smoke rising up from the underbrush" style="width: 50%;">
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">2 / 5</div>
-                <div class="mySlides-image-right" src="/Media/photo-7752747_640.jpg" alt="Forest ablaze in a wildfire"></div>
-                <div class="mySlides-text mySlides-text-left">
+                <div class="mySlides-text mySlides-text-right">
                     <h2>Severe Wildfires</h2>
                     <p>text goes here</p>
                 </div>
+                <img src="/Media/photo-7752747_640.jpg" alt="Forest ablaze in a wildfire" style="width: 50%;">
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">3 / 5</div>
-                <div class="mySlides-image-right" src="/Media/the-forest-fell-2370996_640.jpg" alt="aftermath of a wildfire, trees burnt and the ground scorched" style="width: 100%;"></div>
-                <div class="mySlides-text mySlides-text-left">
+                <div class="mySlides-text mySlides-text-right">
+                    <h2>such devistation</h2>
+                    <p>text goes here</p>
+                </div>
+                <img src="/Media/the-forest-fell-2370996_640.jpg" alt="aftermath of a wildfire, trees burnt and the ground scorched" style="width: 50%;">
+                <div class="mySlides-text mySlides-text-right">
                     <h2>such devistation</h2>
                     <p>text goes here</p>
                 </div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">4 / 5</div>
-                <div class="mySlides-image-right" src="/Media/fire-6706674_640.jpg" alt="Fire fighter spraying a solution to quench the spread of the wildfire"></div>
-                <div class="mySlides-text mySlides-text-left">
+                <div class="mySlides-text mySlides-text-right">
                     <h2>Wildlife Dislocation</h2>
                     <p>text goes here</p>
                 </div>
+                <img src="/Media/fire-6706674_640.jpg" alt="Fire fighter spraying a solution to quench the spread of the wildfire" style="width: 50%;">
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">5 / 5</div>
-                <div class="mySlides-image-right" src="/Media/helicopter-2142140_640.jpg" alt=""></div>
-                <div class="mySlides-text mySlides-text-left">
+                <div class="mySlides-text mySlides-text-right">
                     <h2>Technology and Advanced Equipment</h2>
                     <p>text goes here</p>
                 </div>
+                <img src="/Media/helicopter-2142140_640.jpg" alt="" style="width: 50%;">
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -76,6 +80,7 @@
         <span class="dot" onclick="currentSlide(4)"></span>
         <span class="dot" onclick="currentSlide(5)"></span>
         </div>
+        <script src="main.js"></script>
     </main>
     <footer>
         &copy; Climate Justice 2023. Created by Jonathan
